<resources>
    <string name="app_name">BierApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_beer">Bier hinzufügen</string>
    <string name="action_edit_beer">Bier bearbeiten</string>
    <string name="action_delete_beer">Bier löschen</string>

    <string name="title_activity_add_beer">Bier hinzufügen</string>
    <string name="title_activity_list_beer">Meine Bierübersicht</string>
    <string name="title_activity_beer_detail">Bierdetails</string>
    <string name="title_activity_edit_beer">Bier bearbeiten</string>

    <string name="addBeer_title">Bier hinzufügen</string>
    <string name="addBeer_label_title">Name *</string>
    <string name="addBeer_label_brewery">Brauerei</string>
    <string name="addBeer_label_origin">Herkunft</string>
    <string name="addBeer_label_alcoholContent">Alkoholgehalt</string>
    <string name="addBeer_label_calories">Kalorien</string>
    <string name="addBeer_label_text">Beschreibung</string>
    <string name="addBeer_label_rating">Bewertung</string>
    <string name="addBeer_label_image">Produktbild</string>
    <string name="addBeer_btn_save">Speichern</string>

    <string name="editBeer_title">Bier bearbeiten</string>
    <string name="editBeer_label_title">Name *</string>
    <string name="editBeer_label_brewery">Brauerei</string>
    <string name="editBeer_label_origin">Herkunft</string>
    <string name="editBeer_label_alcoholContent">Alkoholgehalt</string>
    <string name="editBeer_label_calories">Kalorien</string>
    <string name="editBeer_label_text">Beschreibung</string>
    <string name="editBeer_label_rating">Bewertung</string>
    <string name="editBeer_label_image">Produktbild</string>
    <string name="editBeer_btn_save">Speichern</string>

    <string name="showBeer_title">Bierdetails</string>
    <string name="showBeer_label_title">Name</string>
    <string name="showBeer_label_brewery">Brauerei</string>
    <string name="showBeer_label_origin">Herkunft</string>
    <string name="showBeer_label_alcoholContent">Alkoholgehalt</string>
    <string name="showBeer_label_calories">Kalorien</string>
    <string name="showBeer_label_text">Beschreibung</string>
    <string name="showBeer_label_dateAdded">Hinzugefügt</string>
    <string name="showBeer_label_rating">Bewertung</string>
</resources>
