<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".EditBeerActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_title"
                android:id="@+id/textView_edit_lblTitle" />

            <EditText
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:id="@+id/editBeer_editText_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_brewery"
                android:id="@+id/textView_edit_lblBrewery" />

            <EditText
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:id="@+id/editBeer_editText_brewery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_origin"
                android:id="@+id/textView_edit_lblOrigin" />

            <EditText
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:id="@+id/editBeer_editText_origin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_alcoholContent"
                android:id="@+id/textView_edit_lblAlcoholContent" />

            <EditText
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editBeer_editText_alcoholContent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_calories"
                android:id="@+id/textView_edit_lblCalories" />

            <EditText
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editBeer_editText_calories" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_text"
                android:id="@+id/textView_edit_lblText" />

            <EditText
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editBeer_editText_text"
                android:lines="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editBeer_label_rating"
                android:id="@+id/textView_edit_lblRating" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar_edit" />
        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editBeer_btn_save"
            android:id="@+id/button_edit_save"
            android:onClick="updateBeerInDB" />

    </LinearLayout>

</ScrollView>
